Commit the 70... somethingth

--- a/Ajnfd_jhJohUhHHuhdKpOKJdhjhdnNdjncsdjv_dfiRdkcdbmgklfvjJohknjsvn_HcnJvnnfjJJsajkfnJjfudUdnqjQJoh.html
+++ b/Ajnfd_jhJohUhHHuhdKpOKJdhjhdnNdjncsdjv_dfiRdkcdbmgklfvjJohknjsvn_HcnJvnnfjJJsajkfnJjfudUdnqjQJoh.html
@@ -14,7 +14,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <!-- starcode-version-3.0 =) embed data-starData attr -->
         
-        <title>Jat</title>
+        <title>JomunATech.co.uk | Jat</title>
         <!-- data-starData="/head" -->
     </head>
     <body data-starData="body-" id="body" onload="keepColour()">
@@ -22,15 +22,21 @@
     	<div id="toolbar">
 
     		<div class="dropdown">
-                <button class="dropbtn" style="font-size:30px;">&#8801;</button>
+                <button class="dropbtn" style="font-size:30px;padding-right:8px;">&#8801;</button>
                 <div class="dropdown-content">
                     <a href="Ajnfd_jhJohUhHHuhdKpOKJdhjhdnNdjncsdjv_dfiRdkcdbmgklfvjJohknjsvn_HcnJvnnfjJJsajkfnJjfudUdnqjQJoh.html">Jat Home&nbsp;<i class="fa fa-home" > </i></a>
                     <a href="homepageQueryJatPlusIndexFileThingy.html">JatPro&nbsp;<i class="fa fa-smile-o" > </i></a>
-                    <a href="#">JatStorage&nbsp;<div id="div1" class="fa"> </div></a>
+                    <a href="#">JatCloud&nbsp;<div id="div1" class="fa"> </div></a>
                     <a href="#">JatStore&nbsp;<i class="fa fa-shopping-bag" > </i></a>
-                    <a style="cursor:pointer" onclick="openNav()">Settings&nbsp;<i class="fa fa-cog fa-spin"> </i></a>
                </div>
             </div>
+    		<div class="dropdown">
+                <button class="dropbtn" style="font-size:30px;"><i class="fa fa-user"> </i></button>
+                <div class="dropdown-content">
+                    <a style="cursor:pointer;" onclick="openNav()">Settings&nbsp;<i class="fa fa-cog fa-spin"> </i></a>
+                    <a>Notifications <i class="fa fa-comments-o"> </i></a>
+               </div>
+           </div>
     	    <a class="a" href="index.html">Log Out</a>
     	    <div id="myNav" class="overlay">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">Close Settings&nbsp;<i class="fa fa-cog fa-spin"> </i></a>
@@ -41,11 +47,11 @@
       <a title="EBreakfast C4"><canvas class="canvas" onclick="redChange()" height="50px" width="75px" style="background-color:#ff0040;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
       <a title="Millie Yellow"><canvas class="canvas" onclick="yellowChange()" height="50px" width="75px" style="background-color:#ffbf00;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
       <a title="Johbug Green"><canvas class="canvas" onclick="greenChange()" height="50px" width="75px" style="background-color:#080;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
-      <a title="Tomobug Blue"><canvas class="canvas canvasmargin" onclick="tBlueChange()" height="50px" width="75px" style="float:left;margin-left:55px;background-color:#24bdff;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
+      <a title="Tomobug Blue"><canvas class="canvas canvasmargin" onclick="tBlueChange()" height="50px" width="75px" style="float:left;background-color:#24bdff;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
       <a title="Japanese Grape"><canvas class="canvas" onclick="purpleChange()" height="50px" width="75px" style="background-color:purple;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
       <a title="Snuggle Grey"><canvas class="canvas" onclick="greyChange()" height="50px" width="75px" style="background-color:#666;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
       <a title="Mummy Maroon"><canvas class="canvas" onclick="maroonChange()" height="50px" width="75px" style="background-color:#800040;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
-      <a title="Daddy Uniform"><canvas class="canvas canvasmargin" onclick="dBlueChange()" height="50px" width="75px" style="float:left;margin-left:55px;background-color:#002050;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
+      <a title="Daddy Uniform"><canvas class="canvas canvasmargin" onclick="dBlueChange()" height="50px" width="75px" style="float:left;background-color:#002050;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
       <a title="Fuji Wisteria"><canvas class="canvas" onclick="fujiChange()" height="50px" width="75px" style="background-color:#c9a0dc;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
       <a title="Grandad Evening"><canvas class="canvas" onclick="orangeChange()" height="50px" width="75px" style="background-color:#ff6500;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
       <a title="Green-fingered Green"><canvas class="canvas" onclick="dGreenChange()" height="50px" width="75px" style="background-color:#040;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
@@ -171,17 +177,19 @@
   </div>
 </div>
     	</div>
-    	<h1 data-starData="h1-1" id="toggle">JAT!</h1>
-    	<p id="toggleTarget" style="display:none;" align="center">It's Amazing!</p>
+    	<a class="asmall" href="index.html" data-starData="a2"><br>Log Out</a>
+    	<h1 data-starData="h1-1" id="toggle" onclick="text()">JAT!</h1>
     	<hr style="background-color:#ccc; height:3px; border: none;" id="hr1" />
+    	<h2 id="toggleTarget" style="display:block;" align="center"> </h2>
     	<h2 data-starData="h2-1">A faster way to do err... stuff</h2>
     	<div>
     		<script>
-    			$(document).ready(function(){
-                    $("#toggle").click(function(){
-                        $("#toggleTarget").slideToggle("slow");
-                    });
-                });
+                var things = ['Amazing', 'Incredible', 'Brilliant', 'Mindblowing', 'Awe-striking', 'The Best', 'Remarkable'];
+    			function text() {
+                    var thing = things[Math.floor(Math.random()*things.length)];   	
+                    var target = document.getElementById("toggleTarget");	
+                    target.innerHTML = "It's " + thing;	
+                };
     		</script>
     	</div>
 <script>
