--- a/homepageQueryJatPlusIndexFileThingy.html
+++ b/homepageQueryJatPlusIndexFileThingy.html
@@ -24,7 +24,7 @@
                     <a href="#">JatStore&nbsp;<i class="fa fa-shopping-bag" aria-hidden="true"></i></a>
                </div>
             </div>
-    	    <a class="a" href="index.html">Jat!</a>
+    	    <a class="a" href="index.html">Log Out</a>
     	</div>
     	<script>
 function openfolder() {
@@ -57,14 +57,14 @@ setInterval(openfolder, 1000);
     		accessed with a TotallyAndVerySecurePassword*.</h3>
     	<h3 align="center">Ask to join JatPro today!</h3>
     	<hr style="height:5px;border-width:0;background-color:black"><br>
-    	<b><h2 style="margin-left: 175px;">JatPro Subscription</h2></b>
-    	<h2 style="margin-left: 230px;"><span style="font-size: 20px;">2p/year</span></h2>
-    	<h3 style="font-size: 20px;margin-left: 100px;">Includes advanced JatApp technology,<br>
-    		<span style="margin-left: -65px;">access to more JStorage and Johtifications plus extra</span><br>
-    		<span style="margin-left: 40px;">bonus Jat secrets and more!</span></h3>
-    	<a data-starData="a" style="margin-left: 195px;" hidefocus="true" href="mailto:joh.jatowl@gmail.com?subject=JatPro%20Request&body=Hello%0D%0AII%20would%20like%20to%20subscribe%20to%20JatPro%20for%20__%20years.%20My%20username%20is%20___.%0D%0AThanks!%0D%0A%20%0D%0AFrom%20_____">Ask about joining!</a>
+    	<b><h2 style="margin-left: 10%;">JatPro Subscription</h2></b>
+    	<h2 style="margin-left: 10%;"><span style="font-size: 20px;">2p/year</span></h2>
+    	<h3 style="font-size: 20px;margin-left: 10%;">Includes advanced JatApp technology,<br>
+    		<span style="margin-left: 0%;">access to more JStorage and Johtifications plus extra</span><br>
+    		<span style="margin-left: 0%;">bonus Jat secrets and more!</span></h3>
+    	<a data-starData="a" style="margin-left: 10%;" hidefocus="true" href="mailto:joh.jatowl@gmail.com?subject=JatPro%20Request&body=Hello%0D%0AII%20would%20like%20to%20subscribe%20to%20JatPro%20for%20__%20years.%20My%20username%20is%20___.%0D%0AThanks!%0D%0A%20%0D%0AFrom%20_____">Ask about joining!</a>
     	<div class="vl"></div>
-    	<h2 style="float: left;margin-left: 770px;margin-top: -185px;">Or use a JatGiftCode!</h2>
+    	<h2 style="float: left;margin-left: 75%;margin-top: -185px;">Or use a JatGiftCode!</h2>
     	<h3 style="margin-left: 850px;margin-top: -135px;font-size: 20px;">Have one?<br>
     		<span style="margin-left: -15px;">Enter it here!</span><br>
     	</h3>
