--- a/homepageQueryJatPlusIndexFileThingy.html
+++ b/homepageQueryJatPlusIndexFileThingy.html
@@ -65,11 +65,11 @@ setInterval(openfolder, 1000);
     	<a data-starData="a" style="margin-left: 10%;" hidefocus="true" href="mailto:joh.jatowl@gmail.com?subject=JatPro%20Request&body=Hello%0D%0AII%20would%20like%20to%20subscribe%20to%20JatPro%20for%20__%20years.%20My%20username%20is%20___.%0D%0AThanks!%0D%0A%20%0D%0AFrom%20_____">Ask about joining!</a>
     	<div class="vl"></div>
     	<h2 style="float: left;margin-left: 75%;margin-top: -185px;">Or use a JatGiftCode!</h2>
-    	<h3 style="margin-left: 850px;margin-top: -135px;font-size: 20px;">Have one?<br>
-    		<span style="margin-left: -15px;">Enter it here!</span><br>
+    	<h3 style="margin-left: 75%;margin-top: -135px;font-size: 20px;">Have one?<br>
+    		<span style="margin-left: 0px;">Enter it here!</span><br>
     	</h3>
-    	<input type="search" style="margin-left: 775px;" placeholder="Ex. ABC123" /><input type="submit" />
-    	<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br />
+    	<input type="search" style="margin-left: 75%;" placeholder="Ex. ABC123" /><input type="submit" />
+    	<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
     	<p>* NOT. Don't judge me. I'm only 10.</p>
     </body>
 </html>
