--- a/madefenders.html
+++ b/madefenders.html
@@ -25,6 +25,10 @@
 	</head>
 	<body onload="runGame()">
 		<canvas id="canvas">MADEFENDERS NOT WORKING =(</canvas>
+		<div style="display:none;" id="menu">
+			<h1>MENU</h1>
+			<p id="listofgames"> </p>
+		</div>
 	    <h1 align="center">MaDefenders | Level 1 | <a href="index.html">Jat</a></h1>
 	    <p align="center"><sub>Engine copyright (C) 2013 dissimulate at Codepen {JR} Name and Level design 2021 ME {JR} Jomunatech 2019 ME</sub></p>
 		<script src="madefenders.js"></script>
