--- a/madefenders.html
+++ b/madefenders.html
@@ -2,11 +2,13 @@
 <html>
 	<head>
 		<title>MaDefenders | JomunATech</title>
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Londrina+Solid:wght@900&display=swap" rel="stylesheet">
 		<style>
 			* {
                 margin: 0;
                 padding: 0;
-                font-family: sans-serif;
+                font-family: 'Londrina Solid', cursive;
             }
             body {
                 background: #f2f2f2;
@@ -14,6 +16,18 @@
             canvas {
                 display:block;
                 margin: 40px auto 20px;
+                margin-left:250px;
+                border: 1px solid #333;
+                border-left: none;
+                box-shadow: 0 0 16px 2px rgba(0,0,0,0.8);
+                float: left;
+            }
+            div {
+            	height: 400px;
+            	float:left;
+                margin: 40px auto 20px;
+                width: 300px;
+                text-align: center;
                 border: 1px solid #333;
                 box-shadow: 0 0 16px 2px rgba(0,0,0,0.8);
             }
@@ -21,16 +35,25 @@
             	text-decoration: none;
             	color: #0000b3;
             }
+            p {
+            	clear:left;
+            }
 		</style>
 	</head>
 	<body onload="runGame()">
 		<canvas id="canvas">MADEFENDERS NOT WORKING =(</canvas>
-		<div style="display:none;" id="menu">
-			<h1>MENU</h1>
-			<p id="listofgames"> </p>
+		<div style="display:block;" id="menu">
+			<br><h1>MaDefenders</h1>
+			<h1 id="displayLevel">Level 1: Ma HQ</h1>
+			<br><h2>Unlocked levels:</h2>
+			<br><h3 id="listofgames1">Level 1</h3>
+			<h3 id="listofgames2" style="display: none;">Level 2</h3>
+			<h3 id="listofgames3" style="display: none;">Level 3</h3>
+			<h3 id="listofgames4" style="display: none;">Level 4</h3>
+			<h3 id="listofgames5" style="display: none;">Level 5</h3>
+			<br><a href="index.html">Back to Jat</a>
 		</div>
-	    <h1 align="center">MaDefenders | Level 1 | <a href="index.html">Jat</a></h1>
-	    <p align="center"><sub>Engine copyright (C) 2013 dissimulate at Codepen {JR} Name and Level design 2021 ME {JR} Jomunatech 2019 ME</sub></p>
+	    <p align="center"><sub>Engine copyright &copy; 2013 dissimulate at Codepen {JR} Name and Level design 2021 ME {JR} Jomunatech 2019 ME</sub></p>
 		<script src="madefenders.js"></script>
 	</body>
 </html>
