--- a/madefenders.html
+++ b/madefenders.html
@@ -51,7 +51,7 @@
 			<h3 id="listofgames3" style="display: none;">Level 3</h3>
 			<h3 id="listofgames4" style="display: none;">Level 4</h3>
 			<h3 id="listofgames5" style="display: none;">Level 5</h3>
-			<br><a href="index.html">Back to Jat</a>
+			<br><a href="index.html">Return to Jat</a>
 		</div>
 	    <p align="center"><sub>Engine copyright &copy; 2013 dissimulate at Codepen {JR} Name and Level design 2021 ME {JR} Jomunatech 2019 ME</sub></p>
 		<script src="madefenders.js"></script>
