--- a/madefenders.html
+++ b/madefenders.html
@@ -43,6 +43,7 @@
 	<body onload="runGame()">
 		<canvas id="canvas">MADEFENDERS NOT WORKING =(</canvas>
 		<div style="display:block;" id="menu">
+			<br>Energy:&nbsp;&nbsp;<meter max="10" value="8" low="4" style="width:150px;" id="energy" optimum="10">/10</meter><br>
 			<br><h1>MaDefenders</h1>
 			<h1 id="displayLevel">Level 1: Ma HQ</h1>
 			<br><h2>Unlocked levels:</h2>
