--- a/Ajnfd_jhJohUhHHuhdKpOKJdhjhdnNdjncsdjv_dfiRdkcdbmgklfvjJohknjsvn_HcnJvnnfjJJsajkfnJjfudUdnqjQJoh.html
+++ b/Ajnfd_jhJohUhHHuhdKpOKJdhjhdnNdjncsdjv_dfiRdkcdbmgklfvjJohknjsvn_HcnJvnnfjJJsajkfnJjfudUdnqjQJoh.html
@@ -7,7 +7,7 @@
         <meta name="description" content="The Official Jat Website">
         <meta name="author" content="ME">
         <link rel="stylesheet" type="text/css" href="asheetofstyles.css" />
-        <link rel="shortcut icon" href="jatlogo2.ico" type="image/x-icon" />
+        <link rel="shortcut icon" href="Images/jatlogo2.ico" type="image/x-icon" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />  
         <script src="cookies.js" type="text/javascript"></script>
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDAFTaabPhK44tV5e8SG3HCxXOx4eMzN9Y&callback=myMap"></script>
