--- a/madefenders.html
+++ b/madefenders.html
@@ -16,7 +16,7 @@
             canvas {
                 display:block;
                 margin: 40px auto 20px;
-                margin-left:250px;
+                margin-left:20%;
                 border: 1px solid #333;
                 border-left: none;
                 box-shadow: 0 0 16px 2px rgba(0,0,0,0.8);
@@ -41,7 +41,7 @@
 		</style>
 	</head>
 	<body onload="runGame()">
-		<canvas id="canvas">MADEFENDERS NOT WORKING =(</canvas>
+		<canvas id="canvas" autofocus>MADEFENDERS NOT WORKING =(</canvas>
 		<div style="display:block;" id="menu">
 			<br>Energy:&nbsp;&nbsp;<meter max="10" min="0" value="6" low="4" style="width:150px;" id="energy" optimum="10">/10</meter><br>
 			<br><h1>MaDefenders</h1>
@@ -54,7 +54,11 @@
 			<h3 id="listofgames5" style="display: none;">Level 5</h3>
 			<br><a href="index.html">Return to Jat</a>
 		</div>
-	    <p align="center"><sub>Engine copyright &copy; 2013 dissimulate at Codepen {JR} Name and Level design 2021 ME {JR} Jomunatech 2019 ME</sub></p>
+		<audio id="ding">
+            <source src="Sounds/ding.wav" type="audio/wav">
+            Oh No!
+        </audio>
+	    <p align="center"><sub>Engine copyright &copy; 2013 dissimulate at Codepen <sup>{JR}</sup> Name and Level design 2021 ME <sup>{JR}</sup> Jomunatech 2019 ME</sub></p>
 		<script src="madefenders.js"></script>
 	</body>
 </html>
