Commit the 96/7/8th

--- a/Ajnfd_jhJohUhHHuhdKpOKJdhjhdnNdjncsdjv_dfiRdkcdbmgklfvjJohknjsvn_HcnJvnnfjJJsajkfnJjfudUdnqjQJoh.html
+++ b/Ajnfd_jhJohUhHHuhdKpOKJdhjhdnNdjncsdjv_dfiRdkcdbmgklfvjJohknjsvn_HcnJvnnfjJJsajkfnJjfudUdnqjQJoh.html
@@ -25,7 +25,9 @@
                 <button class="dropbtn" style="font-size:30px;padding-right:8px;">&#8801;</button>
                 <div class="dropdown-content">
                     <a href="Ajnfd_jhJohUhHHuhdKpOKJdhjhdnNdjncsdjv_dfiRdkcdbmgklfvjJohknjsvn_HcnJvnnfjJJsajkfnJjfudUdnqjQJoh.html">Jat Home&nbsp;<i class="fa fa-home" > </i></a>
-                    <a href="homepageQueryJatPlusIndexFileThingy.html">JatPro&nbsp;<i class="fa fa-smile-o" > </i></a>
+                    <a href="homepageQueryJatPlusIndexFileThingy.html">JatPro&nbsp;<i class="fa fa-smile-o" > </i><svg viewBox="0 0 24 20" width="24" fill="black" stroke="black">
+                        <path d="M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z"> </path>
+                    </svg></a>
                     <a href="#">JatCloud&nbsp;<div id="div1" class="fa"> </div></a>
                     <a href="#">JatStore&nbsp;<i class="fa fa-shopping-bag" > </i></a>
                     <a href="madefenders.html">MaDefenders</a>
