--- a/madefenders.html
+++ b/madefenders.html
@@ -4,6 +4,7 @@
 		<title>MaDefenders | JomunATech</title>
 		<link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Londrina+Solid:wght@900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />  
 		<style>
 			* {
                 margin: 0;
@@ -12,6 +13,7 @@
             }
             body {
                 background: #f2f2f2;
+                cursor: url('tomobug_cursor.cur'), auto;
             }
             canvas {
                 display:block;
