--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Jat Password</title>
+		<base target="_blank" />
 		<style>
 		    html{font-family:sans-serif;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;}
 		    a#a{text-decoration:none;color:#0000b3;font-size:25px;}
@@ -56,7 +57,7 @@ document.onkeydown = function(e) {
 		<h3 align="center">This website requires you to enter a password to view it! You must pass The Test Of Doom to get the password.</h3>
 		<h3 align="center">Take The Test Of Doom at <a href="thetest.html" id="a2">jomunatech.co.uk/thetest</a></h3>
 		<p align="center">Password: <input id="passwordBox" type="password" /></p>
-		<p align="center"><a href="2Ajnfd_jhJohUhHHuhdKpOKJdhjhdnNdjncsdjv_dfiRdkcdbmgklfvjJohknjsvn_HcnJvnnfjJJsajkfnJjfudUdnqjQJoh.html" onclick="return checkPassword();" id="a">Check Password</a></p>
+		<p align="center"><a target="_parent" href="2Ajnfd_jhJohUhHHuhdKpOKJdhjhdnNdjncsdjv_dfiRdkcdbmgklfvjJohknjsvn_HcnJvnnfjJJsajkfnJjfudUdnqjQJoh.html" onclick="return checkPassword();" id="a">Check Password</a></p>
 		<h2 align="center" id="denied" style="font-weight:bold;color:red;"> </h2>
 	</body>
 </html>
