--- a/madefenders.html
+++ b/madefenders.html
@@ -5,6 +5,8 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Londrina+Solid:wght@900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />  
+        <link rel="shortcut icon" href="Images/ma.ico" type="image/x-icon" />
+        <base target="_blank" />
 		<style>
 			* {
                 margin: 0;
