--- a/Ajnfd_jhJohUhHHuhdKpOKJdhjhdnNdjncsdjv_dfiRdkcdbmgklfvjJohknjsvn_HcnJvnnfjJJsajkfnJjfudUdnqjQJoh.html
+++ b/Ajnfd_jhJohUhHHuhdKpOKJdhjhdnNdjncsdjv_dfiRdkcdbmgklfvjJohknjsvn_HcnJvnnfjJJsajkfnJjfudUdnqjQJoh.html
@@ -12,12 +12,12 @@
         <script src="cookies.js" type="text/javascript"></script>
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDAFTaabPhK44tV5e8SG3HCxXOx4eMzN9Y&callback=myMap"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <!-- starcode-version-3.0 =) embed data-starData attr -->
+        <!-- sc_xml data-starData attr_bisc -->
         
         <title>JomunATech.co.uk | Jat</title>
         <!-- data-starData="/head" -->
     </head>
-    <body data-starData="body-" id="body" onload="keepColour()">
+    <body data-starData="body-" id="body" onload="keepColour()" vlink="#0000b3" link="#0000b3">
     	<noscript>Oh dear turn JavaScript on or this won't work.</noscript>
     	<div id="toolbar">
 
@@ -182,9 +182,9 @@
     	</div>
     	<a class="asmall" href="index.html" data-starData="a2"><br>Log Out</a>
     	<h1 data-starData="h1-1" id="toggle" onclick="text()">JAT!</h1>
-    	<hr style="background-color:#ccc; height:3px; border: none;" id="hr1" />
+    	<hr style="background-color:black; height:3px; border: none;" id="hr1" />
     	<h2 id="toggleTarget" style="display:block;" align="center"> </h2>
-    	<h2 data-starData="h2-1">A faster way to do err... stuff</h2>
+    	<h2 data-starData="h2-1">A faster way to do not much really</h2>
     	<div>
     		<script>
                 var things = ['Amazing', 'Incredible', 'Brilliant', 'Mindblowing', 'Awe-striking', 'The Best', 'Remarkable'];
@@ -228,20 +228,40 @@ window.onclick = function(event) {
 </script>
     	<br/>
     	<br/>
-
+        <p align="center">
+        	<ruby>&#x85e4;<rt>ふじ</rt>&#x7530;<rt>た</rt>&#x4e08;<rt>じょう</rt></ruby>
+        </p>
+        <br /><br /><br /><br />
+        <div id="thebottom">
+    	    <hr style="background-color:black; height:3px; border: none;" />
+        	<h2>Jat Details</h2>
+    	    <hr style="background-color:black; height:3px; border: none;" />
+        	<p>Email: <a href="mailto:joh.jatowl@gmail.com">joh.jatowl@gmail.com</a>
+        	<br />Telephone: None because I am ten.
+        	<br />Github: <a href="https://github.com/Jat286/jat">github.com/Jat286/jat</a></p>
+        	<hr style="background-color:black; height:3px; border: none;" />
+            <p>{JR-NC} Jomunatech (Jat) - 2021 SC v.3.0 =)
+            <br /><a href="scDataStarDataAttr.xml">View Starcode Biscuit(s)</a> (this biscuit may be subject to {JR-NC})
+            <br />Credits: <a href="acknowledgements.txt">See here</a></p>
+    	    <hr style="background-color:black; height:3px; border: none;" />
+        </div>
     </body>
     <!-- data-starData="/body" -->
 </html>
-<!--
-	CREDITS:
+<!--      __                      
+      o__( ·)<  [MOO]      
+	   \____)           
+    ~~~~~~~~~~~~~~~~~~~
+    
+	JAT CREDITS:
 	    DESIGNER: 藤田丈
 	    CODER: 藤田丈
 	    JAT {JR-NC} FOUNDER: 藤田丈
-	    {JR-NC} LICENCE: 藤田丈-2019-BID8164
-	    STARCODE: SCv3.0 (B) data-starData attr 藤田丈
+	    {JR-NC} LICENCE: 藤田丈-2019-BWID8164
+	    STARCODE: SCv3.0 =) [Embed] data-starData attr 藤田丈
 	    SPECIAL THANKS TO: E and 藤田友
-	    ------------------------------------------------------------------------
+	    -----------------------------------------------------------------------
 	    {JR-NC}-藤田丈-2020 This website and its domain (jomunatech.co.uk) etc. 
-	    are the property of ME; the owner has a {JR} certificate.
+	    are the property of ME; the owner has a {JR} certificate (yay).
 -->
 	 
