Commit the 103rd

--- a/Ajnfd_jhJohUhHHuhdKpOKJdhjhdnNdjncsdjv_dfiRdkcdbmgklfvjJohknjsvn_HcnJvnnfjJJsajkfnJjfudUdnqjQJoh.html
+++ b/Ajnfd_jhJohUhHHuhdKpOKJdhjhdnNdjncsdjv_dfiRdkcdbmgklfvjJohknjsvn_HcnJvnnfjJJsajkfnJjfudUdnqjQJoh.html
@@ -240,10 +240,35 @@ window.onclick = function(event) {
         	<br />Telephone: None because I am ten.
         	<br />Github: <a href="https://github.com/Jat286/jat">github.com/Jat286/jat</a></p>
         	<hr style="background-color:black; height:3px; border: none;" />
-            <p>{JR-NC} Jomunatech (Jat) - 2021 SC v.3.0 =)
+            <p>{JR-NC} Jomuneziun A Technology (Jat) 2015 - 2021
             <br /><a href="scDataStarDataAttr.xml">View Starcode Biscuit(s)</a> (this biscuit may be subject to {JR-NC})
-            <br />Credits: <a href="acknowledgements.txt">See here</a></p>
+            <br />Credits: <a id="toggleCredits" href="javascript:void(0);">Show/Hide</a></p>
     	    <hr style="background-color:black; height:3px; border: none;" />
+    	    <script>
+    	    	$("#toggleCredits").click(function(){
+                    $("#credits").slideToggle();
+                });
+    	    </script>
+    	    <pre id="credits" style="display:none;">      
+    	       __                      
+    o__( ·)<  [MOO]      
+  \____)           
+~~~~~~~~~~~~~~~~~~~~~~~~~~
+    
+JAT CREDITS:
+DESIGNER: 藤田丈
+CODER: 藤田丈
+JAT {JR-NC} FOUNDER: 藤田丈
+{JR-NC} LICENCE: 藤田丈-2019-BWID8164
+STARCODE: SCv3.0 =) [Embed] data-starData attr 藤田丈
+-----------------------------------------------------------------------
+I would like to thank 藤田友, E and J for MaDefenders Testing, 藤田友 
+for security, E for helping me develop the password and things and 
+Cow the Duck for doing nothing. 
+-----------------------------------------------------------------------
+{JR-NC}-藤田丈-2020 This website and its domain (jomunatech.co.uk) etc. 
+are the property of ME; the owner has a {JR} certificate (yay).
+	        </pre>
         </div>
     </body>
     <!-- data-starData="/body" -->
