Commit the 104th

--- a/Ajnfd_jhJohUhHHuhdKpOKJdhjhdnNdjncsdjv_dfiRdkcdbmgklfvjJohknjsvn_HcnJvnnfjJJsajkfnJjfudUdnqjQJoh.html
+++ b/Ajnfd_jhJohUhHHuhdKpOKJdhjhdnNdjncsdjv_dfiRdkcdbmgklfvjJohknjsvn_HcnJvnnfjJJsajkfnJjfudUdnqjQJoh.html
@@ -18,7 +18,6 @@
         <!-- data-starData="/head" -->
     </head>
     <body data-starData="body-" id="body" onload="keepColour()" vlink="#0000b3" link="#0000b3">
-    	<noscript>Oh dear turn JavaScript on or this won't work.</noscript>
     	<div id="toolbar">
 
     		<div class="dropdown">
@@ -181,10 +180,15 @@
 </div>
     	</div>
     	<a class="asmall" href="index.html" data-starData="a2"><br>Log Out</a>
-    	<h1 data-starData="h1-1" id="toggle" onclick="text()">JAT!</h1>
-    	<hr style="background-color:black; height:3px; border: none;" id="hr1" />
+    	<script>
+    		function jat () {
+			  window.location.replace("Ajnfd_jhJohUhHHuhdKpOKJdhjhdnNdjncsdjv_dfiRdkcdbmgklfvjJohknjsvn_HcnJvnnfjJJsajkfnJjfudUdnqjQJoh.html");
+			}
+    	</script><br />
+    	<h1 data-starData="h1-1" id="toggle" onclick="jat()"><span style="color: red;">J</span><span style="color: #ff7500;">A</span><span style="color: #ffbf00;">T</span><span style="color: green;">!</span></h1>
+    	<noscript>Oh dear turn JavaScript on or this won't work.</noscript>
     	<h2 id="toggleTarget" style="display:block;" align="center"> </h2>
-    	<h2 data-starData="h2-1">A faster way to do not much really</h2>
+    	<h1 onclick="text()" align="center">A faster way to do things but only when I work out out how to develop them :)</h1>
     	<div>
     		<script>
                 var things = ['Amazing', 'Incredible', 'Brilliant', 'Mindblowing', 'Awe-striking', 'The Best', 'Remarkable'];
@@ -228,22 +232,23 @@ window.onclick = function(event) {
 </script>
     	<br/>
     	<br/>
+        <p align="center"><code>Things will go here</code></p>
         <p align="center">
-        	<ruby>&#x85e4;<rt>ふじ</rt>&#x7530;<rt>た</rt>&#x4e08;<rt>じょう</rt></ruby>
+        	<!--<ruby>&#x85e4;<rt>ふじ</rt>&#x7530;<rt>た</rt>&#x4e08;<rt>じょう</rt></ruby>-->
         </p>
         <br /><br /><br /><br />
         <div id="thebottom">
-    	    <hr style="background-color:black; height:3px; border: none;" />
+    	    <hr style="margin-left:-8px;margin-right:-8px;background-color:black; height:3px; border: none;" />
         	<h2>Jat Details</h2>
-    	    <hr style="background-color:black; height:3px; border: none;" />
+    	    <hr style="margin-left:-8px;margin-right:-8px;background-color:black; height:3px; border: none;" />
         	<p>Email: <a href="mailto:joh.jatowl@gmail.com">joh.jatowl@gmail.com</a>
         	<br />Telephone: None because I am ten.
         	<br />Github: <a href="https://github.com/Jat286/jat">github.com/Jat286/jat</a></p>
-        	<hr style="background-color:black; height:3px; border: none;" />
+        	<hr style="margin-left:-8px;margin-right:-8px;background-color:black; height:3px; border: none;" />
             <p>{JR-NC} Jomuneziun A Technology (Jat) 2015 - 2021
             <br /><a href="scDataStarDataAttr.xml">View Starcode Biscuit(s)</a> (this biscuit may be subject to {JR-NC})
             <br />Credits: <a id="toggleCredits" href="javascript:void(0);">Show/Hide</a></p>
-    	    <hr style="background-color:black; height:3px; border: none;" />
+    	    <hr style="margin-left:-8px;margin-right:-8px;background-color:black; height:3px; border: none;" />
     	    <script>
     	    	$("#toggleCredits").click(function(){
                     $("#credits").slideToggle();
