--- a/Ajnfd_jhJohUhHHuhdKpOKJdhjhdnNdjncsdjv_dfiRdkcdbmgklfvjJohknjsvn_HcnJvnnfjJJsajkfnJjfudUdnqjQJoh.html
+++ b/Ajnfd_jhJohUhHHuhdKpOKJdhjhdnNdjncsdjv_dfiRdkcdbmgklfvjJohknjsvn_HcnJvnnfjJJsajkfnJjfudUdnqjQJoh.html
@@ -10,14 +10,81 @@
         <link rel="shortcut icon" href="Images/jatlogo2.ico" type="image/x-icon" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />  
         <script src="cookies.js" type="text/javascript"></script>
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDAFTaabPhK44tV5e8SG3HCxXOx4eMzN9Y&callback=myMap"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
+        <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
         <!-- sc_xml data-starData attr_bisc -->
-        
+        <script>
+            window.onscroll = function() {scrollFunction()};
+            function scrollFunction() {
+                if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+                    document.getElementById("topButton").style.display = "block";
+                } else {
+                    document.getElementById("topButton").style.display = "none";
+                }
+            }
+        </script>
         <title>JomunATech.co.uk | Jat</title>
         <!-- data-starData="/head" -->
     </head>
-    <body data-starData="body-" id="body" onload="keepColour()" vlink="#0000b3" link="#0000b3">
+    <body data-starData="body-" id="body" onload="keepColour(); display_ct(); opn();" vlink="#0000b3" link="#0000b3">
+        <div id="myModal" class="modal">
+            <!-- Modal content -->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h2>This site uses Cookies</h2>
+                </div>
+                <div class="modal-body">
+                    <p>This site uses Cookies to track your data. Cookies were approved by the Jomun Rights 1546 &sect; Webpages (Law 126b)</p> 
+                    <p>(<a href="#">see here</a>). By clicking below, you agree to using custom ads, biscuit tracking and thingymabobing.</p>
+                    <p>If you wish to accept, press Accept Cookies. If you wish to refuse, press Deny All.</p>
+                </div>
+                <div class="modal-footer">
+                    <button style="margin-left: 320px;" class="btn">&check; Accept Cookies</button><button style="float:right;margin-right:320px;" class="btn2">&cross; Deny All</button>
+                </div>
+            </div>
+        </div>
+        <script>
+          var cook = document.cookie;
+          document.cookie = "username=username; path=/";
+          document.cookie = "password=*********; path=/";
+          document.cookie = "dateofbirth=ddmmyyyy; path=/";
+          var allowq = localStorage.getItem("allowed");
+          allow = false;
+          function opn() {
+            setTimeout(function(){
+            	if(allowq == "false") {
+                  modal.style.display = "block";  
+                }            	         
+            }, 1500);
+          };
+          var modal = document.getElementById("myModal");
+          var btn = document.getElementsByClassName("btn")[0];
+          var btn2 = document.getElementsByClassName("btn2")[0];
+          btn.onclick = function() {
+            modal.style.display = "none";
+            allow = true;
+            console.log("Cookies allowed");
+            console.log(allow);
+            localStorage.setItem("allowed", allow);
+          };
+          btn2.onclick = function() {
+            modal.style.display = "none";
+            allow = false;
+            console.log("Cookies denied");
+            console.log(allow);
+            localStorage.setItem("allowed", allow);
+            document.cookie = "username=; expires=Sat, 01 Jan 1600 00:00:00 UTC; path=/";
+          };
+          document.getElementById("btn3").onclick = function() {
+            modal.style.display = "none";
+            allow = false;
+            console.log("Cookies denied");
+            console.log(allow);
+            localStorage.setItem("allowed", allow);
+            document.cookie = "username=; expires=Sat, 01 Jan 1600 00:00:00 UTC; path=/";
+          };
+        </script>
     	<div id="toolbar">
 
     		<div class="dropdown">
@@ -58,7 +125,7 @@
       <a title="Grandad Evening"><canvas class="canvas" onclick="orangeChange()" height="50px" width="75px" style="background-color:#ff6500;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
       <a title="Green-fingered Green"><canvas class="canvas" onclick="dGreenChange()" height="50px" width="75px" style="background-color:#040;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
       <p>&nbsp;</p><p>&nbsp;</p>
-      <p>Placeholder</p>
+      <button id="btn3">Deny Cookies</button>
       <a onclick="resetColour()" id="resetButton">Reset</a>
       <br/>
       <br/>
@@ -68,29 +135,41 @@
         function resetColour() {
             bar.style.backgroundImage = "none";
             bar.style.backgroundColor = "#ccc";
+            document.getElementById("header").style.border = "5px solid black";
             theBody.style.fontFamily = "'Ubuntu'";
             var backgroundColour = "#ccc";
             localStorage.setItem("colourKey", backgroundColour);
             var fontFamily = "'Ubuntu'";
             localStorage.setItem("fontKey", fontFamily);
+            var thingBorder = "5px solid black";
+            localStorage.setItem("borderKey", thingBorder);
       	}
       	function blueChange() {
             bar.style.backgroundImage = "none";
             bar.style.backgroundColor = "#0000b3";
             var backgroundColour = "#0000b3";
+            document.getElementById("header").style.border = "5px solid #0000b3";
             localStorage.setItem("colourKey", backgroundColour);
+            var thingBorder = "5px solid #0000b3";
+            localStorage.setItem("borderKey", thingBorder);
       	}
       	function redChange() {
             bar.style.backgroundImage = "none";
             bar.style.backgroundColor = "#ff0040";
             var backgroundColour = "#ff0040";
             localStorage.setItem("colourKey", backgroundColour);
+            document.getElementById("header").style.border = "5px solid #ff0040";
+            var thingBorder = "5px solid #ff0040";
+            localStorage.setItem("borderKey", thingBorder);
       	}
       	function dGreenChange() {
             bar.style.backgroundImage = "none";
             bar.style.backgroundColor = "#040";
             var backgroundColour = "#040";
             localStorage.setItem("colourKey", backgroundColour);
+            document.getElementById("header").style.border = "5px solid #040";
+            var thingBorder = "5px solid #040";
+            localStorage.setItem("borderKey", thingBorder);
       	}
       	function orangeChange() {
             bar.style.backgroundImage = "none";
@@ -100,6 +179,9 @@
             localStorage.setItem("colourKey", backgroundColour);
             var fontFamily = "Comic Sans MS";
             localStorage.setItem("fontKey", fontFamily);
+            document.getElementById("header").style.border = "5px solid #ff6500";
+            var thingBorder = "5px solid #ff6500";
+            localStorage.setItem("borderKey", thingBorder);
       	}
       	function yellowChange() {
             bar.style.backgroundImage = "none";
@@ -109,6 +191,9 @@
             localStorage.setItem("colourKey", backgroundColour);
             var fontFamily = "'Dr Sugiyama'";
             localStorage.setItem("fontKey", fontFamily);
+            document.getElementById("header").style.border = "5px solid #ffbf00";
+            var thingBorder = "5px solid #ffbf00";
+            localStorage.setItem("borderKey", thingBorder);
       	}
       	function greenChange() {
             bar.style.backgroundImage = "none";
@@ -118,24 +203,36 @@
             localStorage.setItem("colourKey", backgroundColour);
             var fontFamily = "'Share'";
             localStorage.setItem("fontKey", fontFamily);
+            document.getElementById("header").style.border = "5px solid #080";            
+            var thingBorder = "5px solid #080";
+            localStorage.setItem("borderKey", thingBorder);
       	}
       	function purpleChange() {
             bar.style.backgroundImage = "none";
             bar.style.backgroundColor = "purple";
             var backgroundColour = "purple";
             localStorage.setItem("colourKey", backgroundColour);
+            document.getElementById("header").style.border = "5px solid purple";    
+            var thingBorder = "5px solid purple";
+            localStorage.setItem("borderKey", thingBorder);     
       	}
       	function fujiChange() {
             bar.style.backgroundImage = "none";
             bar.style.backgroundColor = "#c9a0dc";
             var backgroundColour = "#c9a0dc";
             localStorage.setItem("colourKey", backgroundColour);
+            document.getElementById("header").style.border = "5px solid #c9a0dc";   
+            var thingBorder = "5px solid #c9a0dc";
+            localStorage.setItem("borderKey", thingBorder);
       	}
       	function greyChange() {
             bar.style.backgroundImage = "none";
             bar.style.backgroundColor = "#666";
             var backgroundColour = "#666";
             localStorage.setItem("colourKey", backgroundColour);
+            document.getElementById("header").style.border = "5px solid #666";   
+            var thingBorder = "5px solid #666";
+            localStorage.setItem("borderKey", thingBorder);
       	}
       	function dBlueChange() {
             bar.style.backgroundImage = "none";
@@ -145,6 +242,9 @@
             localStorage.setItem("colourKey", backgroundColour);
             var fontFamily = "'Kalam'";
             localStorage.setItem("fontKey", fontFamily);
+            document.getElementById("header").style.border = "5px solid #002050";   
+            var thingBorder = "5px solid #002050";
+            localStorage.setItem("borderKey", thingBorder);
       	}
       	function tBlueChange() {
             bar.style.backgroundImage = "none";
@@ -154,6 +254,9 @@
             localStorage.setItem("colourKey", backgroundColour);
             var fontFamily = "consolas";
             localStorage.setItem("fontKey", fontFamily);
+            document.getElementById("header").style.border = "5px solid #24bdff"; 
+            var thingBorder = "5px solid #24bdff";
+            localStorage.setItem("borderKey", thingBorder);
       	}
       	function maroonChange() {
             bar.style.backgroundImage = "none";
@@ -166,6 +269,9 @@
             localStorage.setItem("fontKey", fontFamily);
             var fontStyle = "bold";
             localStorage.setItem("styleKey", fontStyle);
+            document.getElementById("header").style.border = "5px solid #800040"; 
+            var thingBorder = "5px solid #800040";
+            localStorage.setItem("borderKey", thingBorder);
       	}
       	function keepColour() {
             var backgroundColour = localStorage.getItem("colourKey");
@@ -173,7 +279,9 @@
             var fontFamily = localStorage.getItem("fontKey");
             theBody.style.fontFamily = fontFamily;	
             var fontStyle = localStorage.getItem("styleKey");
-            theBody.style.fontWeight = fontStyle;	
+            theBody.style.fontWeight = fontStyle;
+            var thingBorder = localStorage.getItem("borderKey");
+            document.getElementById("header").style.border = thingBorder;	
       	}
       </script>
   </div>
@@ -185,11 +293,57 @@
 			  window.location.replace("Ajnfd_jhJohUhHHuhdKpOKJdhjhdnNdjncsdjv_dfiRdkcdbmgklfvjJohknjsvn_HcnJvnnfjJJsajkfnJjfudUdnqjQJoh.html");
 			}
     	</script><br />
-    	<h1 data-starData="h1-1" id="toggle" onclick="jat()"><span style="color: red;">J</span><span style="color: #ff7500;">A</span><span style="color: #ffbf00;">T</span><span style="color: green;">!</span></h1>
+    	<h1 data-starData="h1-1" id="header" onclick="jat()"><span style="color: #ff0040;">J</span><span style="color: #ff7500;">A</span><span style="color: #ffbf00;">T</span><span style="color: #080;">!</span></h1>
     	<noscript>Oh dear turn JavaScript on or this won't work.</noscript>
+        	<div>
+        		    	<p align="center"><span id="ct"> </span></p>
+    		<div class="main-carousel">
+                <div class="carousel-cell" id="carousel-cell-1">...</div>
+                <div class="carousel-cell" id="carousel-cell-2">...</div>
+                <div class="carousel-cell" id="carousel-cell-3">...</div>
+            </div>
     	<h2 id="toggleTarget" style="display:block;" align="center"> </h2>
-    	<h1 onclick="text()" align="center">A faster way to do things but only when I work out out how to develop them :)</h1>
-    	<div>
+            <script type="text/javascript"> 
+            function display_c() {
+                var refresh=1000; // Refresh rate in milli seconds
+                mytime=setTimeout('display_ct()',refresh);
+            }
+            function display_ct() {
+                var z = new Date();
+                var x1=z.toUTCString();// changing the display to UTC string
+                document.getElementById('ct').innerHTML = x1;
+                tt=display_c();
+            };
+            </script>
+        <div style="margin-left: 10px;"><h1 align="left" onclick="text()">Lots of Things</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vel laoreet magna. Sed laoreet lacinia orci commodo facilisis.<br />
+        Pellentesque porta consectetur metus, posuere condimentum velit porta eget. Nulla posuere semper tortor nec accumsan.<br />
+        Vivamus sodales libero arcu. Vestibulum aliquam dolor at fermentum elementum. Vestibulum molestie ultricies semper. Nam at pulvinar sem.<br /> 
+        In commodo diam eget libero varius laoreet. Suspendisse euismod neque et lectus rhoncus, id sollicitudin nulla lobortis.<br /> 
+        Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed euismod odio orci, non pellentesque tellus molestie non. <br />
+        Donec nec lorem non diam posuere elementum in et nulla. Aliquam erat volutpat. Nunc eu est sapien.<br />
+        Donec vel laoreet dolor. Proin pellentesque dui at massa commodo pellentesque. Integer ut magna enim. <br />
+        Nam sed erat ultricies, pulvinar felis sed, bibendum justo. Fusce non felis at ligula lacinia feugiat. Nunc non aliquet est. <br />
+        In tempor tristique lacus, non luctus nunc varius eget. Pellentesque suscipit.</p></div>
+            <script>
+            	$('.main-carousel').flickity({
+                  arrowShape: {
+                     x0: 20,
+                     x1: 65, y1: 30,
+                     x2: 65, y2: 15,
+                     x3: 65
+                  },
+                  cellAlign: 'left',
+                  contain: true,
+                  wrapAround: true,
+                  freeScroll: true,
+                  initialIndex: 0,
+                  pageDots: false,
+                  autoPlay: 2000,
+                  pauseAutoPlayOnHover: false,
+               });
+            </script>
+    	    <a id="topButton" href="#body">Scroll to Top</a>
     		<script>
                 var things = ['Amazing', 'Incredible', 'Brilliant', 'Mindblowing', 'Awe-striking', 'The Best', 'Remarkable'];
     			function text() {
@@ -230,13 +384,10 @@ window.onclick = function(event) {
   };
 };
 </script>
-    	<br/>
-    	<br/>
-        <p align="center"><code>Things will go here</code></p>
         <p align="center">
         	<!--<ruby>&#x85e4;<rt>ふじ</rt>&#x7530;<rt>た</rt>&#x4e08;<rt>じょう</rt></ruby>-->
         </p>
-        <br /><br /><br /><br />
+        <br /><br />
         <div id="thebottom">
     	    <hr style="margin-left:-8px;margin-right:-8px;background-color:black; height:3px; border: none;" />
         	<h2>Jat Details</h2>
