--- a/index.html
+++ b/index.html
@@ -46,23 +46,18 @@ document.onkeydown = function(e) {
 			  var usrnameText = usrname.value;
 			  //me
 			  if (passwordText == "1Zw2dtp3wbh@hwgf1$" && usrnameText == "Carrot") {
-			  	localStorage.setItem("name", usrnameText);
 			  	return true;
 			  //edward
 			  } else if (passwordText == "CaRbON=C6" && usrnameText == "ELikesJat") {
-			  	localStorage.setItem("name", usrnameText);
 			  	return true;
 			  //tomo
 			  } else if (passwordText == "ma ma" && usrnameText == "ma") {
-			  	localStorage.setItem("name", usrnameText);
 			  	return true;
 			  //mum
 			  } else if (passwordText == "JBntM" && usrnameText == "MB'se2rU") {
-			  	localStorage.setItem("name", usrnameText);
 			  	return true;
 			  //justin
 			  } else if (passwordText == "Ikeastoragebox987!" && usrnameText == "accountusername.justin") {
-			  	localStorage.setItem("name", usrnameText);
 			  	return true;
 			  }
 			  var i = 0;
@@ -91,8 +86,8 @@ document.onkeydown = function(e) {
 	<body id="body">
     	<br /><h1 data-starData="h1-1" id="header"><span style="color: #ff0040;">J</span><span style="color: #ff7500;">A</span><span style="color: #ffbf00;">T</span><span style="color: #080;">!</span></h1>
 		<br /><fieldset class="fieldset"><legend>Log In</legend>
-		<p align="center">Username: <input id="usrnameBox" type="text" required /></p>
-		<p align="center">Password: &nbsp;<input id="passwordBox" type="password" required /><!--<button onclick="show()" style="height: 31px;"><i class="fa fa-eye"> </i></button>--></p>
+		<p align="center">Username: <input id="usrnameBox" type="text" /></p>
+		<p align="center">Password: &nbsp;<input id="passwordBox" type="password" /><!--<button onclick="show()" style="height: 31px;"><i class="fa fa-eye"> </i></button>--></p>
 		<p align="center"><a target="_parent" href="2Ajnfd_jhJohUhHHuhdKpOKJdhjhdnNdjncsdjv_dfiRdkcdbmgklfvjJohknjsvn_HcnJvnnfjJJsajkfnJjfudUdnqjQJoh.html" onclick="return checkPassword();" id="a">Check Details</a></p>
 		<h2 align="center" id="denied" style="font-weight:bold;color:red;"> </h2></fieldset>
 		<br /><h3 align="center">Don't have a JatAccount? You must pass The Test Of Doom to get one. <br/></h3>
